@@ -82,11 +82,11 @@
   $db->query($sql);  
 
   $sql = "create table access_log (
-    sessionid	varchar(30),
-    loginid	varchar(30),
-    ip		varchar(30),
-    li		int,
-    lo		int
+    sessionid	varchar(255),
+    loginid	  varchar(30),
+    ip		   varchar(30),
+    li		   int,
+    lo		   int
   )";
   $db->query($sql);  
 
