@@ -1,6 +1,7 @@
 [0.9.2] - Fixed sorting bug in currentusers.php
 		- Cleaned up error reporting and form in newaccount.php
 		- Fixed viewaccounts.php not updated to the new accounts table.
+		- Fixed access_log not being updated durring logouts.
 
 [0.9.1] - Fixed a few missing variables with templates.
 	    - editing a product in the inventory program now forwards you back to the category
